--- a/watering.ioc
+++ b/watering.ioc
@@ -25,16 +25,17 @@ Mcu.Name=STM32L432K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
 Mcu.Pin1=PC15-OSC32_OUT (PC15)
-Mcu.Pin10=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin2=PA0
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
-Mcu.Pin5=PA13 (JTMS-SWDIO)
-Mcu.Pin6=PA14 (JTCK-SWCLK)
-Mcu.Pin7=PA15 (JTDI)
-Mcu.Pin8=PB3 (JTDO-TRACESWO)
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.Pin5=PA4
+Mcu.Pin6=PA13 (JTMS-SWDIO)
+Mcu.Pin7=PA14 (JTCK-SWCLK)
+Mcu.Pin8=PA15 (JTDI)
+Mcu.Pin9=PB3 (JTDO-TRACESWO)
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L432KCUx
@@ -77,6 +78,10 @@ PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Signal=ADCx_IN8
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=REL
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=LD3 [Green]
 PB3\ (JTDO-TRACESWO).Locked=true
@@ -118,7 +123,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
